add emprestimo & fixes
